--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,8 +14,8 @@
             android:id="@+id/action_newsFragment_to_searchResultFragment"
             app:destination="@id/searchResultFragment" />
         <action
-            android:id="@+id/action_newsFragment_to_articleFragment"
-            app:destination="@id/articleFragment" />
+            android:id="@+id/action_newsFragment_to_articleDetailsFragment"
+            app:destination="@id/articleDetailsFragment" />
     </fragment>
     <fragment
         android:id="@+id/searchResultFragment"
@@ -26,28 +26,28 @@
             android:name="searchQuery"
             app:argType="string" />
         <action
-            android:id="@+id/action_searchResultFragment_to_articleFragment"
-            app:destination="@id/articleFragment" />
+            android:id="@+id/action_searchResultFragment_to_articleDetailsFragment"
+            app:destination="@id/articleDetailsFragment" />
     </fragment>
     <fragment
-        android:id="@+id/articleFragment"
-        android:name="com.peeranm.worldnews.articledetails.fragment.ArticleFragment"
-        android:label="ArticleFragment"
-        tools:layout="@layout/fragment_article" >
+        android:id="@+id/articleDetailsFragment"
+        android:name="com.peeranm.worldnews.articledetails.fragment.ArticleDetailsFragment"
+        android:label="ArticleDetailsFragment"
+        tools:layout="@layout/fragment_article_details">
         <argument
             android:name="articleUrl"
-            app:argType="string"
             android:defaultValue="@null"
+            app:argType="string"
             app:nullable="true" />
         <argument
             android:name="isFavourite"
-            app:argType="boolean"
-            android:defaultValue="false" />
+            android:defaultValue="false"
+            app:argType="boolean" />
         <argument
             android:name="article"
-            app:argType="com.peeranm.worldnews.feature_news.model.Article"
-            app:nullable="true"
-            android:defaultValue="@null" />
+            android:defaultValue="@null"
+            app:argType="com.peeranm.worldnews.newsfeed.model.Article"
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/favouriteArticlesFragment"
@@ -55,7 +55,7 @@
         android:label="FavouriteArticlesFragment"
         tools:layout="@layout/fragment_favourite_articles" >
         <action
-            android:id="@+id/action_favouriteArticlesFragment_to_articleFragment"
-            app:destination="@id/articleFragment" />
+            android:id="@+id/action_favouriteArticlesFragment_to_articleDetailsFragment"
+            app:destination="@id/articleDetailsFragment" />
     </fragment>
 </navigation>
