--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
 
     <color name="primaryColor">#66bb6a</color>
     <color name="primaryColorVariant">#338a3e</color>
-    <color name="gray">#bdbdbd</color>
+    <color name="lightGray">#bdbdbd</color>
+    <color name="gray">#757575</color>
 </resources>
