Added logic that shows proper labels for pages like article details, favourite articles

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -48,6 +48,11 @@
             android:defaultValue="@null"
             app:argType="com.peeranm.newscorner.newsfeed.model.Article"
             app:nullable="true" />
+        <argument
+            android:name="source"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="@null"/>
     </fragment>
     <fragment
         android:id="@+id/favouriteArticlesFragment"
