--- a/app/src/main/res/layout/article_item.xml
+++ b/app/src/main/res/layout/article_item.xml
@@ -47,7 +47,7 @@
         android:ellipsize="end"
         android:fontFamily="@font/inter_bold"
         android:maxLines="3"
-        android:textColor="@android:color/black"
+        android:textColor="?android:textColorPrimary"
         android:textSize="@dimen/_12ssp"
         app:layout_constraintBottom_toTopOf="@+id/textDescription"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +67,7 @@
         android:fontFamily="@font/inter_regular"
         android:maxLines="4"
         android:minLines="4"
-        android:textColor="@android:color/black"
+        android:textColor="?android:textColorPrimary"
         android:textSize="@dimen/_10ssp"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -82,7 +82,7 @@
         android:layout_marginStart="@dimen/_4sdp"
         android:layout_marginEnd="@dimen/_4sdp"
         android:fontFamily="@font/inter_medium"
-        android:textColor="@color/gray"
+        android:textColor="?android:textColorSecondary"
         android:textSize="@dimen/_10ssp"
         android:maxLines="1"
         android:ellipsize="end"
