--- a/app/src/main/res/layout/country_item.xml
+++ b/app/src/main/res/layout/country_item.xml
@@ -9,10 +9,11 @@
         android:id="@+id/textCountryName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/_16sdp"
         android:layout_weight="1"
-        android:textColor="?android:attr/textColorPrimary"
-        android:textSize="16sp"
+        android:fontFamily="@font/inter_regular"
+        android:textColor="?android:textColorPrimary"
+        android:textSize="@dimen/_14ssp"
         tools:text="India" />
 
     <RadioButton
