--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,8 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="primaryColor">#66bb6a</color>
+    <color name="primaryLightColor">#98ee99</color>
     <color name="primaryColorVariant">#338a3e</color>
-    <color name="lightGray">#bdbdbd</color>
+    <color name="lightGray">#e0e0e0</color>
     <color name="gray">#757575</color>
 </resources>
