Added a color & some constants

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="primaryColorVariant">#338a3e</color>
     <color name="lightGray">#e0e0e0</color>
     <color name="gray">#757575</color>
+    <color name="yellow">#fff176</color>
 </resources>
